--- a/charts/patroni/templates/statefulset.yaml
+++ b/charts/patroni/templates/statefulset.yaml
@@ -201,6 +201,10 @@ spec:
       affinity:
 {{ tpl .Values.affinityTemplate . | indent 8 }}
     {{- end }}
+      {{- with .Values.imagePullSecrets }}
+      imagePullSecrets:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       volumes:
       - name: patroni-config
         secret:
