--- a/charts/keycloak/templates/route.yaml
+++ b/charts/keycloak/templates/route.yaml
@@ -6,6 +6,9 @@ metadata:
   annotations:
     haproxy.router.openshift.io/balance: roundrobin
     haproxy.router.openshift.io/disable_cookies: 'true'
+    {{ if .Values.annotations.timeout }}
+    haproxy.router.openshift.io/timeout: {{ .Values.annotations.timeout }}
+    {{ end }}
 spec:
   tls:
     insecureEdgeTerminationPolicy: Redirect
