fix: updates to handle clustering error

--- a/charts/keycloak/templates/service-ping.yaml
+++ b/charts/keycloak/templates/service-ping.yaml
@@ -6,7 +6,6 @@ metadata:
   labels: {{ include "sso-keycloak.labels" . | nindent 4 }}
   annotations:
     description: "The JGroups ping port for clustering."
-    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
     {{- if .Values.tls.enabled }}
     # see https://miminar.fedorapeople.org/_preview/openshift-enterprise/registry-redeploy/dev_guide/secrets.html#service-serving-certificate-secrets
     service.alpha.openshift.io/serving-cert-secret-name: {{ include "sso-keycloak.fullname" . }}-x509-jgroups
@@ -19,4 +18,5 @@ spec:
       targetPort: ping
       protocol: TCP
   selector: {{ include "sso-keycloak.selectorLabels" . | nindent 4 }}
+  publishNotReadyAddresses: true
 {{- end }}
