--- a/charts/keycloak/Chart.yaml
+++ b/charts/keycloak/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 name: sso-keycloak
 version: 1.14.4
 appVersion: 7.6.25-build.1
-description: Open Source Identity and Access Management For Modern Applications and Service
+description: Open Source Identity and Access Management For Modern Applications and Services
 dependencies:
   - name: patroni
     version: 1.5.2
