fix: fix indenting, add test chart number

--- a/.github/workflows/publish-helm-chart-manual.yml
+++ b/.github/workflows/publish-helm-chart-manual.yml
@@ -1,9 +1,9 @@
-name: Manually Publish Helm Chart
+name: Publish Helm Charts
 
 on:
   workflow_dispatch:
-  inputs:
-    chart:
+    inputs:
+      chart:
         description: "The helm chart to publish"
         type: choice
         required: true
