--- a/charts/patroni/Chart.yaml
+++ b/charts/patroni/Chart.yaml
@@ -3,7 +3,7 @@ name: patroni
 description: "Highly available: HA PostgreSQL cluster."
 version: 1.5.2
 appVersion: 2.1-p5
-home: https://thegentlemanphysicist.github.io/sso-helm-charts/tree/main/charts/patroni
+home: https://github.com/bcgov/sso-helm-charts/tree/main/charts/patroni
 sources:
   - https://github.com/zalando/patroni
   - https://github.com/zalando/spilo
