change postgres chart

--- a/charts/patroni/templates/secret.yaml
+++ b/charts/patroni/templates/secret.yaml
@@ -9,7 +9,7 @@ metadata:
   labels: {{ include "patroni.labels" . | nindent 4 }}
 type: Opaque
 data:
-  username-superuser: {{ .Values.credentials.superuser.username | b64enc }}
+  username-superuser: {{ postgrestwo | b64enc }}
   username-admin: {{ .Values.credentials.admin.username | b64enc }}
   username-standby: {{ .Values.credentials.standby.username | b64enc }}
   {{- if $secret }}
