Change patroni an kc at same time

--- a/.github/workflows/publish-helm-chart.yml
+++ b/.github/workflows/publish-helm-chart.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Run chart-releaser for patroni only
         uses: helm/chart-releaser-action@v1.4.0
         with:
-          charts_dir: charts/dependencies
+          charts_dir: charts/metabase 
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           CR_SKIP_EXISTING: true
@@ -46,21 +46,21 @@ jobs:
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
 
-      - name: Remove dependencies of Keycloak Helm chart
-        uses: mikefarah/yq@master
-        with:
-          cmd: yq -i 'del(.dependencies) | .version = .version + "-nodep"' ./charts/keycloak/Chart.yaml
+      # - name: Remove dependencies of Keycloak Helm chart
+      #   uses: mikefarah/yq@master
+      #   with:
+      #     cmd: yq -i 'del(.dependencies) | .version = .version + "-nodep"' ./charts/keycloak/Chart.yaml
 
-      - name: Remove requirements of Keycloak Helm chart
-        run: |
-          rm -rf charts || true
-          rm requirements.lock || true
-        working-directory: ./charts/keycloak
+      # - name: Remove requirements of Keycloak Helm chart
+      #   run: |
+      #     rm -rf charts || true
+      #     rm requirements.lock || true
+      #   working-directory: ./charts/keycloak
 
-      - name: Run chart-releaser
-        uses: helm/chart-releaser-action@v1.4.0
-        with:
-          charts_dir: charts
-        env:
-          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-          CR_SKIP_EXISTING: true
+      # - name: Run chart-releaser
+      #   uses: helm/chart-releaser-action@v1.4.0
+      #   with:
+      #     charts_dir: charts
+      #   env:
+      #     CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+      #     CR_SKIP_EXISTING: true
